Add local release-build scripts for the EXE (small + standalone)
BUILD-EXE.bat wraps the jar into a single SteamSwitcher.exe via Launch4j (auto-downloaded). BUILD-STANDALONE.bat produces the no-Java-needed standalone via jlink+jpackage. README build section updated to reference them.